--- a/manifest.jenkins.yml
+++ b/manifest.jenkins.yml
@@ -11,15 +11,10 @@ applications:
     - pz-postgres
     - pz-geoserver-efs
   env:
-    CATALOG_HOST: __CATALOG_HOST__
-    CATALOG_SCHEME: __CATALOG_SCHEME__
-
-    GEOAXIS_HOST: __GEOAXIS_HOST__
-    GEOAXIS_SCHEME: __GEOAXIS_SCHEME__
-    GEOAXIS_CLIENT_ID: __GEOAXIS_CLIENT_ID__
-    GEOAXIS_SECRET: __GEOAXIS_SECRET__
-    GEOAXIS_REDIRECT_URI: __GEOAXIS_REDIRECT_URI__
-
-    PIAZZA_HOST: __PIAZZA_HOST__
-    PIAZZA_SCHEME: __PIAZZA_SCHEME__
-    PIAZZA_API_KEY: __PIAZZA_API_KEY__
+    CONFIG: production
+    CATALOG_HOST: ~
+    GEOAXIS_HOST: ~
+    GEOAXIS_CLIENT_ID: ~
+    GEOAXIS_CLIENT_SECRET: ~
+    PIAZZA_HOST: ~
+    PIAZZA_API_KEY: ~
