--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 ---
 language: python
 python: 3.5
-cache: pip
 
 git:
   depth: 1
 
 script:
   - set -e
-  - ./scripts/test.sh
+  - echo y | ./scripts/test.sh
