--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 ---
 language: python
 python: 3.5
-node_js: 7.6
 
 git:
   depth: 1
+
+before_install:
+  - curl -sL https://deb.nodesource.com/setup_7.x | sudo -E bash -
+  - sudo apt-get update
+  - sudo apt-get install -y nodejs
 
 script:
   - set -e
