--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+passlib==1.7.1
 psycopg2==2.6.2
 python-dateutil==2.5.3
 requests==2.12.1
