CI: Add script to build CF manifest

--- a/jenkins.properties
+++ b/jenkins.properties
@@ -3,6 +3,7 @@ packaging=zip
 gitUrl=https://github.com/venicegeo/dg-bf-api
 cfApi=https://api.sys.coastline.dg-cf-test.net
 cfDomain=apps.coastline.dg-cf-test.net
+cfManifest=manifest.jenkins.yml
 cfOrg=radiant
 cfSpace=dev
 ldapCredentialId=pcf_user
